--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -1,8 +1,8 @@
-@page
+﻿@page
 @model AnunciarMiAutoModel
 @{
     ViewData["Title"] = Model.IsEditMode ? "Editar Anuncio - AutoClick.cr" : "Anunciar Mi Auto - AutoClick.cr";
-    Layout = "~/Pages/Shared/_LayoutMinimal.cshtml"; // Usar el mismo layout que Index
+    Layout = "~/Pages/Shared/_LayoutMinimal.cshtml";
 }
 
 @section Styles {
